# python-project-52

./: .gitignore  Makefile  Procfile  README.md  build.sh  coverage.xml  db.sqlite3  manage.py  pyproject.toml  requirements.txt
.github/workflows/: pyci.yml
locale/ru/LC_MESSAGES/: django.po
task/: pyvenv.cfg
task_manager/: settings.py  urls.py  views.py
task_manager/article/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/article/migrations/: 0001_initial.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py
task_manager/statuses/: models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/task_manager/: settings.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_author.py  0002_initial.py  0003_alter_task_author_alter_task_labels_alter_task_name_and_more.py  0004_alter_task_labels.py  0005_alter_task_description_alter_task_performer_and_more.py  0006_rename_performer_task_executor.py
task_manager/templates/: base.html  create.html  delete.html  footer.html  head.html  index.html  login.html  nav.html  nav_panel.html  update.html
task_manager/tests/: tests_labels.py  tests_statuses.py  tests_tasks.py  tests_users.py
task_manager/users/: models.py  my_mixin.py  urls.py  views.py
(+20 files in other folders)
