[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ValeriaLukovich"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
gunicorn = "^21.2.0"
uvicorn = "^0.29.0"
django = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
